syntax = "proto3";

package mu_executor.gossip;

message IPAddress {
    oneof address {
        bytes ipv4 = 1;
        bytes ipv6 = 2;
    }
}

message NodeAddress {
    IPAddress ip = 1;
    uint32 port = 2;
    uint64 upper_generation = 3;
    fixed64 lower_generation = 4;
}

message StackID {
    oneof id {
        bytes solana = 1;
    }
}

message Heartbeat {
    NodeAddress node_address = 1;
    uint32 seq = 2;
    uint32 distance = 3;
    bytes region_id = 4;
    repeated StackID deployed_stacks = 5;
}

message GossipMessage {
    oneof message {
        Heartbeat heartbeat = 1;
        NodeAddress goodbye = 2;
    }
}